[tool.poetry]
name = "circle-ci"
version = "0.1.0"
description = "This service is currently a stateless service that acts as an adapter for various data warehouses. It will not maintain any state around credentials, and will not pool connections. It exposes a set of endpoints that expect credentials to be passed with them every time, and will then open a connection and perform any warehouse specific actions needed to get the desired results."
authors = [
    "Tongming Li <tongming@getcatalyst.io>"
]

readme="Readme.md"
repository = "https://github.com/catalystio/warehouse-integration-service"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "=1.1.1"
psycopg2-binary = "=2.8.4"
requests = "=2.22.0"
snowflake-sqlalchemy = "=1.1.15"
sqlalchemy = "=1.3.10"
sentry-sdk = {version = "0.13.1", extras = ["flask"]}
urllib3 = "<1.25.0"
flake8 = "=3.7.9"
bandit = "=1.5.1"
pytest = "5.2.2"
black = "19.3b0"
"testing.postgresql" = "1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry==0.12.7"]
build-backend = "poetry.masonry.api"
